first big push, index.html

--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
 								<header id="header">
 									<a href="index.html" class="logo"><strong><img src="images/logo.png"></a>
 									<ul class="icons">
-										<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li> -->
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+										<li><a href="englishindex.html">English</a></li>
+										<li><a href="germanindex.html">Deutsch</a></li>
+										<li><a href="https://www.facebook.com/ComunidadYAxion/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 										<!-- <li><a href="#" class="icon brands fa-snapchat-ghost"> <span class="label">Snapchat</span></a></li> -->
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+										<!-- <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
 										<!-- <li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li> -->
 									</ul>
 								</header>
@@ -30,88 +31,92 @@
 								<section id="banner">
 									<div class="content">
 										<header>
-											<h1>Hi, I’m Editorial<br />
-											by HTML5 UP</h1>
-											<p>A free and fully responsive site template</p>
+											<h1>Nuestra Mission</h1>
 										</header>
-										<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
+										<p>Promover y generar procesos formativos y comunitarios que fomenten el desarrollo humano y social para y con personas de sectores empobrecidos, preferentemente niños, niñas, mujeres y jóvenes.
+
+										Las comunidades son el corazón de nuestro trabajo. En las comunidades conscientes las personas asumen su responsabilidad por su entorno y por la Madre Tierra. Por eso, el cuidado entre personas y el cuidado de la Vida y de la Madre Tierra son nuestros objetivos básicos.Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
 										<ul class="actions">
-											<li><a href="#" class="button big">Learn More</a></li>
+											<li><a href="#" class="button big">Más información</a></li>
 										</ul>
 									</div>
 									<span class="image object">-
-										<img src="images/pic10.jpg" alt="" />
+										<img src="images/RS88800_BOL20180502_livelihoods_ms0554.jpg" alt="" />
 									</span>
 								</section>
 
 							<!-- Section -->
 								<section>
-									<header class="major">
-										<h2>Erat lacinia</h2>
-									</header>
 									<div class="features">
 										<article>
-											<span class="icon fa-gem"></span>
+											<span class="icon solid fa-house-user"></span>
 											<div class="content">
-												<h3>Portitor ullamcorper</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+												<h3><a href="sobrenosotros.html">Sobre Nosotros</a></h3>
+												<p>Somos una Fundación en El Alto Bolivia fuimos creado en 2006 y trabajamos con niños y niñas, jóvenes y mujeres
+												empobrecidas migrantes o con algún grado de migración. Somos apasionada a cuidar la Madre Tierra y empoderar la gente
+												quien trabajamos. <a href="sobrenosotros.html">leer mas...</a></p>
 											</div>
 										</article>
 										<article>
-											<span class="icon solid fa-paper-plane"></span>
+											<span class="icon solid fa-people-carry"></span>
 											<div class="content">
-												<h3>Sapien veroeros</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+												<h3><a href="quehacemos.html">Que Hacemos</a></h3>
+												<p>Trabajamos con los huertos ecológicos urbanos y la gestión y de la convivencia de la paz con jóvenes. También hacemos
+												las investigaciones participativas en nuestros proyectos. <a href="quehacemos.html">leer mas...</a></p>
 											</div>
 										</article>
 										<article>
-											<span class="icon solid fa-rocket"></span>
+											<span class="icon solid fa-heart"></span>
 											<div class="content">
-												<h3>Quam lorem ipsum</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+												<h3><a href="NuestroIdeario.html">Nuestro Ideario</a></h3>
+												<p>Creemos en la reflexión, pensar, ética y axión. Queremos empoderar las personas a crear el futuro que desean. Somos
+												siempre consciente a cómo podemos cuidar por la Madre Tierra en nuestras trabajos y vidas. <a href="NuestroIdeario.html">leer mas...</a></p>
 											</div>
 										</article>
 										<article>
-											<span class="icon solid fa-signal"></span>
+											<span class="icon solid fa-seedling"></span>
 											<div class="content">
-												<h3>Sed magna finibus</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+												<h3><a href="donar.html">Donar</a></h3>
+												<p>Su dinero va directamente a nuestros diversos proyectos, con efectos mensurables e inconmensurables en las vidas de los
+												residentes de El Alto. <a href="donar.html">Más información...</a></p>
 											</div>
 										</article>
 									</div>
 								</section>
 
-							<!-- Section -->
+							<!-- Blog Section -->
 								<section>
 									<header class="major">
-										<h2>Ipsum sed dolor</h2>
+										<h2>El Blog</h2>
 									</header>
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
-											<h3>Interdum aenean</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<a href="#" class="image"><img src="images/RS88739_BOL20180502_livelihoods_ms0492.jpg" alt="woman smiling while working in garden" /></a>
+											<h3>Huertos Ecológicos Urbanos</h3>
+											<p>Las Huertas Ecológicas Urbanas para el autoconsumo familiar, no para la comercialización, son la parte esencial de
+											nuestro trabajo. Especialmente con las mujeres migrantes o con algún grado de migración.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="#" class="button">Más</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
-											<h3>Nulla amet dolore</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<a href="#" class="image"><img src="images/DSCN6345.JPG" alt="youth with cabbage" /></a>
+											<h3>Jóvenes gestores de la paz y de la convivencia</h3>
+											<p>Colaboramos con los jóvenes para ayudarles a equiparse de las habilidades necesarias para gestionar la convivencia que,
+											a su vez, genera paz en los sistemas sociales y ecológicos de los que forman parte.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="#" class="button">Más</a></li>
 											</ul>
 										</article>
-										<article>
+										<!-- <article>
 											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 											<h3>Tempus ullamcorper</h3>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 											<ul class="actions">
 												<li><a href="#" class="button">More</a></li>
 											</ul>
-										</article>
-										<article>
+										</article> -->
+										<!-- <article>
 											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
 											<h3>Sed etiam facilis</h3>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
@@ -134,10 +139,49 @@
 											<ul class="actions">
 												<li><a href="#" class="button">More</a></li>
 											</ul>
-										</article>
+										</article> -->
 									</div>
 								</section>
 
+							<section>
+								<header class="major">
+									<h2>Contáctenos</h2>
+								</header>
+								<!-- <p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper
+									dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p> -->
+								<form action="mailto:fund_communaxion@yahoo.es" method="get" enctype="text/plain">
+									<div>
+										<label for="name">Nombre:
+											<input type="text" name="name" id="name" />
+										</label>
+									</div>
+									<div>
+										<label for="email">Correo Electrónico:
+											<input type="text" name="email" id="email" />
+										</label>
+									</div>
+									<div>
+										<label>Mensaje:</label>
+										<br />
+										<textarea name="comments" rows="4" cols="35">póngase en contacto con nosotros</textarea>
+									</div>
+									<div>
+										<input type="submit" name="submit" value="Send" />
+										<input type="reset" name="reset" value="Clear Form" />
+									</div>
+								</form>
+								<ul class="contact">
+									<!-- <li class="icon solid fa-envelope"><a href="mailto: fund_comunaxion@yahoo.es>fund_comunaxion@yahoo.es">fund_communaxion@yahoo.es</a></li> -->
+									<li class="icon solid fa-home">Plan 40, Manzano U, No. 4 Urbanización Primero de Mayo, El Alto, Departamento La Paz Bolivia </li>
+									<li class="icon solid fa-phone">(+591) 2 283 5542 </li>
+									<!-- <li><a href="https://www.facebook.com/ComunidadYAxion/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
+								</ul>
+							</section>
+							<section>
+								<footer id="footer">
+									<p class="copyright">&copy; Fundación Communidad y Axión. Todos los derechos reservados. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+									</footer>
+							</section>
 						</div>
 					</div>
 
@@ -148,21 +192,21 @@
 							<!-- Search -->
 								<section id="search" class="alt">
 									<form method="post" action="#">
-										<input type="text" name="query" id="query" placeholder="Search" />
+										<input type="text" name="query" id="query" placeholder="Buscar" />
 									</form>
 								</section>
 
 							<!-- Menu -->
 								<nav id="menu">
 									<header class="major">
-										<h2>Menu</h2>
+										<h2>Menú</h2>
 									</header>
 									<ul>
-										<li><a href="index.html">Homepage</a></li>
-										<li><a href="generic.html">Generic</a></li>
-										<li><a href="elements.html">Elements</a></li>
+										<li><a href="index.html">Página de Inicio</a></li>
+										<li><a href="sobrenosotros.html">Sobre Nosotros</a></li>
+										<!-- <li><a href="quehacemos.html">Que Hacemos</a></li> -->
 										<li>
-											<span class="opener">Submenu</span>
+											<span class="opener">Que Hacemos</span>
 											<ul>
 												<li><a href="#">Lorem Dolor</a></li>
 												<li><a href="#">Ipsum Adipiscing</a></li>
@@ -170,8 +214,8 @@
 												<li><a href="#">Feugiat Veroeros</a></li>
 											</ul>
 										</li>
-										<li><a href="#">Etiam Dolore</a></li>
-										<li><a href="#">Adipiscing</a></li>
+										<!-- <li><a href="#">Etiam Dolore</a></li> -->
+										<!-- <li><a href="#">Adipiscing</a></li> -->
 										<li>
 											<span class="opener">Another Submenu</span>
 											<ul>
@@ -181,14 +225,14 @@
 												<li><a href="#">Feugiat Veroeros</a></li>
 											</ul>
 										</li>
-										<li><a href="#">Maximus Erat</a></li>
+										<!-- <li><a href="#">Maximus Erat</a></li>
 										<li><a href="#">Sapien Mauris</a></li>
-										<li><a href="#">Amet Lacinia</a></li>
+										<li><a href="#">Amet Lacinia</a></li> -->
 									</ul>
 								</nav>
 
 							<!-- Section -->
-								<section>
+								<!-- <section>
 									<header class="major">
 										<h2>Ante interdum</h2>
 									</header>
@@ -209,10 +253,10 @@
 									<ul class="actions">
 										<li><a href="#" class="button">More</a></li>
 									</ul>
-								</section>
+								</section> -->
 
 							<!-- Section -->
-								<section>
+								<!-- <section>
 									<header class="major">
 										<h2>Get in touch</h2>
 									</header>
@@ -223,11 +267,11 @@
 										<li class="icon solid fa-home">1234 Somewhere Road #8254<br />
 										Nashville, TN 00000-0000</li>
 									</ul>
-								</section>
+								</section> -->
 
 							<!-- Footer -->
 								<footer id="footer">
-									<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+									<p class="copyright">&copy; Fundación Communidad y Axión. Todos los derechos reservados. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 								</footer>
 
 						</div>
