--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong><img src="images/logo.png"></a>
+									<img class="logo" src="images/logo.png">
 									<ul class="icons">
 										<li><a href="englishindex.html">English</a></li>
 										<li><a href="germanindex.html">Deutsch</a></li>
@@ -74,7 +74,7 @@
 											</div>
 										</article>
 										<article>
-											<span class="icon solid fa-seedling"></span>
+											<span class="icon solid fa-hand-holding-heart"></span>
 											<div class="content">
 												<h3><a href="donar.html">Donar</a></h3>
 												<p>Su dinero va directamente a nuestros diversos proyectos, con efectos mensurables e inconmensurables en las vidas de los
@@ -108,15 +108,15 @@
 												<li><a href="#" class="button">Más</a></li>
 											</ul>
 										</article>
-										<!-- <article>
+										<article>
 											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 											<h3>Tempus ullamcorper</h3>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 											<ul class="actions">
 												<li><a href="#" class="button">More</a></li>
 											</ul>
-										</article> -->
-										<!-- <article>
+										</article>
+										<article>
 											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
 											<h3>Sed etiam facilis</h3>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
@@ -124,15 +124,15 @@
 												<li><a href="#" class="button">More</a></li>
 											</ul>
 										</article>
-										<article>
+										<!-- <article>
 											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
 											<h3>Feugiat lorem aenean</h3>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 											<ul class="actions">
 												<li><a href="#" class="button">More</a></li>
 											</ul>
-										</article>
-										<article>
+										</article> -->
+										<!-- <article>
 											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
 											<h3>Amet varius aliquam</h3>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
@@ -166,8 +166,8 @@
 										<textarea name="comments" rows="4" cols="35">póngase en contacto con nosotros</textarea>
 									</div>
 									<div>
-										<input type="submit" name="submit" value="Send" />
-										<input type="reset" name="reset" value="Clear Form" />
+										<input type="submit" name="submit" value="Enviar" />
+										<input type="reset" name="reset" value="Forma Clara" />
 									</div>
 								</form>
 								<ul class="contact">
@@ -202,32 +202,33 @@
 										<h2>Menú</h2>
 									</header>
 									<ul>
-										<li><a href="index.html">Página de Inicio</a></li>
+										<li><a href="index.html">Inicio</a></li>
 										<li><a href="sobrenosotros.html">Sobre Nosotros</a></li>
 										<!-- <li><a href="quehacemos.html">Que Hacemos</a></li> -->
 										<li>
 											<span class="opener">Que Hacemos</span>
 											<ul>
-												<li><a href="#">Lorem Dolor</a></li>
-												<li><a href="#">Ipsum Adipiscing</a></li>
-												<li><a href="#">Tempus Magna</a></li>
-												<li><a href="#">Feugiat Veroeros</a></li>
+												<li><a href="#">Huertos Ecológicos Urbanos</a></li>
+												<li><a href="#">Jovenes</a></li>
+												<li><a href="#">Investigacion</a></li>
+												<li><a href="#">Participacion</a></li>
 											</ul>
 										</li>
 										<!-- <li><a href="#">Etiam Dolore</a></li> -->
 										<!-- <li><a href="#">Adipiscing</a></li> -->
 										<li>
-											<span class="opener">Another Submenu</span>
+											<!-- <span class="opener">Another Submenu</span>
 											<ul>
 												<li><a href="#">Lorem Dolor</a></li>
 												<li><a href="#">Ipsum Adipiscing</a></li>
 												<li><a href="#">Tempus Magna</a></li>
 												<li><a href="#">Feugiat Veroeros</a></li>
-											</ul>
+											</ul> -->
 										</li>
-										<!-- <li><a href="#">Maximus Erat</a></li>
-										<li><a href="#">Sapien Mauris</a></li>
-										<li><a href="#">Amet Lacinia</a></li> -->
+										<li><a href="#">Nuestro Ideario</a></li>
+										<li><a href="#">Donar</a></li>
+										<li><a href="#">El Blog</a></li>
+										<li><a href="#">Contáctenos</a></li>
 									</ul>
 								</nav>
 
